// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequirementsFormLegacy /> call api on every value changed 1`] = `undefined`;

exports[`<RequirementsFormLegacy /> call api on every value changed 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "field": "form_valid",
          "form": "requirements-form",
          "persistentSubmitErrors": undefined,
          "touch": undefined,
        },
        "payload": false,
        "type": "@@redux-form/CHANGE",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "field": "form_valid",
          "form": "requirements-form",
          "persistentSubmitErrors": undefined,
          "touch": undefined,
        },
        "payload": false,
        "type": "@@redux-form/CHANGE",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "field": "form_valid",
          "form": "requirements-form",
          "persistentSubmitErrors": undefined,
          "touch": undefined,
        },
        "payload": false,
        "type": "@@redux-form/CHANGE",
      },
    ],
    Array [
      Object {
        "meta": Object {
          "form": "requirements-form",
        },
        "type": "@@redux-form/START_SUBMIT",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<RequirementsFormLegacy /> call api on every value changed 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "input": Object {
          "requirement": "requirement5",
          "value": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`<RequirementsFormLegacy /> call api on every value changed 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "input": Object {
          "dateOfBirth": "1992-04-09T23:21:06+0200",
        },
      },
    ],
    Array [
      Object {
        "input": Object {
          "firstname": "Aurélien",
        },
      },
    ],
    Array [
      Object {
        "input": Object {
          "lastname": "David",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`<RequirementsFormLegacy /> doesnt call api when value is same 1`] = `undefined`;

exports[`<RequirementsFormLegacy /> should render a vote widget for a simple vote without limit 1`] = `
<form>
  <Field
    addonBefore="France +33"
    component={[Function]}
    disabled={false}
    divClassName="col-sm-12 col-xs-12"
    id="requirement1"
    key="requirement1"
    label={
      <FormattedMessage
        id="mobile-phone"
        values={Object {}}
      />
    }
    name="requirement1"
    placeholder={null}
    type="text"
  />
  <EmotionCssPropInternal
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    component={[Function]}
    css={
      Object {
        "label": Object {
          "fontSize": 18,
          "marginBottom": 10,
        },
        "label + div": Object {
          "gap": 10,
        },
      }
    }
    disabled={false}
    divClassName="d-flex mb-15"
    globalClassName="col-sm-12 col-xs-12"
    id="requirement2"
    key="requirement2"
    label={
      <FormattedMessage
        id="form.label_date_of_birth"
        values={Object {}}
      />
    }
    name="requirement2"
    placeholder={null}
  />
  <Field
    component={[Function]}
    disabled={false}
    divClassName="col-sm-12 col-xs-12"
    id="requirement3"
    key="requirement3"
    label={
      <FormattedMessage
        id="form.label_firstname"
        values={Object {}}
      />
    }
    name="requirement3"
    placeholder={null}
    type="text"
  />
  <Field
    component={[Function]}
    disabled={false}
    divClassName="col-sm-12 col-xs-12"
    id="requirement4"
    key="requirement4"
    label={
      <FormattedMessage
        id="global.name"
        values={Object {}}
      />
    }
    name="requirement4"
    placeholder={null}
    type="text"
  />
  <Field
    component={[Function]}
    disabled={false}
    divClassName="col-sm-12 col-xs-12"
    id="requirement5"
    key="requirement5"
    label={false}
    name="requirement5"
    placeholder={null}
    type="checkbox"
  >
    Offrir mon âme à Voldemort
  </Field>
  <Field
    component={[Function]}
    disabled={false}
    divClassName="col-sm-12 col-xs-12"
    id="IdentificationCodeRequirement"
    key="requirement6"
    label={
      <FormattedMessage
        id="identification_code"
        values={Object {}}
      />
    }
    minlength={8}
    name="requirement6"
    placeholder="Ex: 25FOVC10"
    type="text"
  />
</form>
`;

exports[`<RequirementsFormLegacy /> validate correctly 1`] = `Object {}`;

exports[`<RequirementsFormLegacy /> validate correctly 2`] = `Object {}`;

exports[`<RequirementsFormLegacy /> validate correctly 3`] = `
Object {
  "requirement1": "profile.constraints.phone.invalid",
  "requirement2": "global.required",
  "requirement3": "global.required",
  "requirement4": "global.required",
  "requirement5": "global.required",
  "requirement6": "global.required",
}
`;

exports[`<RequirementsFormLegacy /> validate correctly 4`] = `
Object {
  "requirement2": "global.required",
  "requirement3": "global.required",
  "requirement4": "global.required",
  "requirement5": "global.required",
  "requirement6": "global.required",
}
`;
